--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -8,4 +8,10 @@
     Публикация {{ post.publish }} от {{ post.author }}
 </p>
     {{ post.body|linebreaks }}
+<p>
+    <a href="{% url 'blog:post_share' post.id %}">
+        Поделиться постом
+    </a>
+
+</p>
 {% endblock %}
